@@ -143,5 +143,6 @@
 		<script src="js/popup/pages/profile.js"></script>
 		<script src="js/popup/pages/about.js"></script>
 		<script src="js/popup/init.js"></script>
+		<script src="js/popup/platform.js"></script>
 	</body>
 </html>
